[tool.poetry]
name = "imagekit-bot-1"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pyTelegramBotAPI = "^4.7.0"
Flask = "^2.2.2"
imagekitio = "^2.2.8"
replit = "^3.2.4"
validators = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
